dark mode minor syntax fixes

--- a/src/onlySearch/index.css
+++ b/src/onlySearch/index.css
@@ -1,8 +1,8 @@
 .dark-mode,
-.ant-row ant-form-item {
+.ant-row ant-form-item .body {
   margin: 0px;
   color: white;
-  background: black;
+  background: #111d2c;
   text-align: center;
 }
 
